--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         <div class="container mx-auto items-center justify-between">
             <div class="flex">
                 <a class="text-3xl font-burtons font-bold text-white">Portfolio</a>
+                <div class="relative">
+                    <button id="dropdownButton" class="flex items-center justify-center gap-8">
+                        <img src="assets/Barath.jpg" alt="Profile" class="w-10 min-w-[40px] h-10 min-h-[40px] drop-shadow-xl cursor-pointer rounded-xl" />
+                    </button>
+        
+                    <div id="dropdownMenu" class="dropdown-menu absolute right-0 mt-2 w-48 bg-gradient-to-r bg-white shadow-lg z-50 rounded-lg">
+                        <a href="https://weatherapp-br03.netlify.app/" class="block px-4 py-2 text-gray-800 hover:bg-blue-800 hover:text-white">Weather App</a>
+                        <a href="https://qrcodegeneratorbr3003.netlify.app/" class="block px-4 py-2 text-gray-800 hover:bg-blue-800 hover:text-white">QrCode Generator</a>
+                    </div>
+                </div>
                 <a
                   class="ml-auto bg-gradient-to-r from-cyan-500 text- to-teal-500 text-white px-4 py-2 border-none rounded-md ml-8"
                   href="https://docs.google.com/document/d/1FJ62y9keSvgPsERNxgivpox61XxB4BSO/edit?usp=drivesdk&ouid=114816768149013258932&rtpof=true&sd=true"
@@ -545,5 +555,24 @@
           &copy; All Rights Reserved
         </div>
     </footer>
+
+     <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const dropdownButton = document.getElementById('dropdownButton');
+            const dropdownMenu = document.getElementById('dropdownMenu');
+
+            // Toggle dropdown visibility
+            dropdownButton.addEventListener('click', () => {
+                dropdownMenu.classList.toggle('show');
+            });
+
+            // Close dropdown when clicking outside
+            document.addEventListener('mousedown', (event) => {
+                if (!dropdownButton.contains(event.target) && !dropdownMenu.contains(event.target)) {
+                    dropdownMenu.classList.remove('show');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
