--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <section class=" lg:fixed w-full bg-gray-800 rounded-2xl p-5 pb- 5 mb-10">
         <div class="container mx-auto items-center justify-between">
             <div class="flex">
-                <a class="text-3xl font-burtons font-bold text-white">Portfolio</a>
-                <div class="relative ml-auto">
+                <a class="text-3xl font-burtons font-bold text-white gap-8">Portfolio</a>
+                <div class="relative">
                     <button id="dropdownButton" class="flex items-center justify-center gap-8">
-                        <img src="./assets/Barath.jpg" alt="Profile" class="w-10 min-w-[40px] h-10 min-h-[40px] drop-shadow-xl cursor-pointer rounded-xl" />
+                        <img src="./Assests/Barath.jpg" alt="Profile" class="w-10 min-w-[40px] h-10 min-h-[40px] drop-shadow-xl cursor-pointer rounded-xl" />
                     </button>
         
                     <div id="dropdownMenu" class="dropdown-menu absolute right-0 mt-2 w-48 bg-gradient-to-r bg-white shadow-lg z-50 rounded-lg">
