--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="text-3xl font-burtons font-bold text-white">Portfolio</a>
                 <a
                   class="ml-auto bg-gradient-to-r from-cyan-500 text- to-teal-500 text-white px-4 py-2 border-none rounded-md ml-8"
-                  href="https://docs.google.com/document/d/1SG2SmEDw0qldyVZfGnvhn00PrynJKnYWsVkJ5mjtPKg/edit?usp=sharing"
+                  href="Assests/Barathramana_C_Resume.pdf"
                 >
                   Resume
                 </a>
